Update podspec, readme and example

--- a/extensions/Podfile
+++ b/extensions/Podfile
@@ -2,8 +2,8 @@ source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
 use_frameworks!
 
-pod 'Alamofire', :git => 'https://github.com/Alamofire/Alamofire.git', :branch => 'swift-2.0'
-pod 'CancellationToken', :path => '../'
+pod 'Alamofire', '~> 2.0'
+# pod 'CancellationToken', :path => '../' # All CancellationToken source files are manually included in project
 
 target :CancellationTokenExtensionsTests do
   # This Pods library links with a target in another project.
