--- a/extensions/Podfile
+++ b/extensions/Podfile
@@ -1,11 +1,27 @@
+workspace 'CancellationTokenExtensions.xcodeproj'
 source 'https://github.com/CocoaPods/Specs.git'
 platform :ios, '8.0'
-use_frameworks!
 
-pod 'Alamofire', '~> 2.0'
-# pod 'CancellationToken', :path => '../' # All CancellationToken source files are manually included in project
+abstract_target 'CancellationTokenExtensionPods' do
+  use_frameworks!
+  pod 'Alamofire', :git => 'https://github.com/Alamofire/Alamofire', :branch => 'swift3'
+  # pod 'CancellationToken', :path => '../' # All CancellationToken source files are manually included in project
 
-target :CancellationTokenExtensionsTests do
-  # This Pods library links with a target in another project.
-  xcodeproj 'CancellationTokenExtensions'
+  target :CancellationTokenExtensions do
+    # This Pods library links with a target in another project.
+    project 'CancellationTokenExtensions'
+
+    target :CancellationTokenExtensionsTests do
+      inherit! :search_paths
+    end
+  end
 end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['SWIFT_VERSION'] = '3.0'
+    end
+  end
+end
+
